# automerge

./: DESCRIPTION  MD5  NAMESPACE  NEWS.md  README.md  configure  configure.win
R/: constants.R  convenience.R  cursors.R  document.R  methods.R  objects.R  sync.R
inst/: AUTHORS
man/: am_apply_changes.Rd  am_change_actor_id.Rd  am_change_deps.Rd  am_change_from_bytes.Rd  am_change_hash.Rd  am_change_message.Rd  am_change_seq.Rd  am_change_size.Rd  am_change_time.Rd  am_change_to_bytes.Rd  am_close.Rd  am_create.Rd  am_cursor.Rd  am_cursor_position.Rd  am_delete_path.Rd  am_fork.Rd  am_get_actor.Rd  am_get_actor_hex.Rd  am_get_change_by_hash.Rd  am_get_changes.Rd  am_get_changes_added.Rd  am_get_heads.Rd  am_get_history.Rd  am_get_last_local_change.Rd  am_get_missing_deps.Rd  am_insert.Rd  am_items.Rd  am_length.Rd  am_list_get_all.Rd  am_list_range.Rd  am_load.Rd  am_load_changes.Rd  am_map_get_all.Rd  am_mark.Rd  am_mark_clear.Rd  am_marks.Rd  am_marks_at.Rd  am_put.Rd  am_put_path.Rd  am_save.Rd  (+15 more)
src/: Makevars.win.in  automerge.h  cursors.c  document.c  init.c  objects.c  sync.c
src/automerge/rust/automerge/: Cargo.toml
src/automerge/rust/automerge/src/: change_graph.rs  types.rs
src/automerge/rust/automerge/src/op_set2/: op_set.rs  skip_list.rs
src/automerge/rust/automerge/src/op_set2/change/: collector.rs
src/automerge/rust/automerge/src/patches/: patch_log.rs
src/automerge/rust/automerge/src/storage/columns/: raw_column.rs
tools/: patch-rust-msrv.sh  patch-sources.sh  vendor-deps.sh
vignettes/: automerge.Rmd  quick-reference.Rmd  (+1 more)
(+29 files in other folders)
