[package]
name = "automerge"
version = "0.7.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge"
rust-version = "1.80.0"
description = "A JSON-like data structure (a CRDT) that can be modified concurrently by different users, and merged again automatically"
readme = "./README.md"

[features]
optree-visualisation = ["dot"]
utf8-indexing = []
utf16-indexing = []

[dependencies]
hexane = { version = "0.1.7", path = "../hexane" }
hex = "^0.4.3"
leb128 = "^0.2.5"
sha2 = "0.10.8"
thiserror = "^2.0.12"
itertools = "0.14.0"
flate2 = "^1.0.22"
smol_str = { version = "0.2", features = ["serde"] }
tracing = { version = "^0.1.29" }
rustc-hash = "^2.1.1"
tinyvec = { version = "^1.5.1", features = ["alloc"] }
serde = { version = "^1.0", features = ["derive"] }
cfg-if = "1.0"
getrandom = "0.2"

# optional deps
dot = { version = "0.1.4", optional = true }
rand = { version = "^0.8", optional = false, features = ["small_rng"] }

unicode-segmentation = "1.10.1"

[lints]
workspace = true

